k8s/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infin8-canary
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: infin8-app
      track: canary
  template:
    metadata:
      labels:
        app: infin8-app
        track: canary
    spec:
      containers:
        - image: dhruvk321/infin8:latest
          name: infin8-app
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8000
          command: ["/bin/sh", "-c", "python manage.py ensure_admin && python manage.py runserver 0.0.0.0:8000"]
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: infin8-canary
spec:
  type: ClusterIP
  selector:
    app: infin8-app
    track: canary
  ports:
    - port: 80
      targetPort: 8000
